# firestarter-workflows

./: .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yaml  mkdocs.yaml  pyproject.toml  release-please-config.json
.github/workflows/: build_images.yaml  delete-pr-comments.yaml  firestarter_pr-verify.yaml  firestarter_pr-verify_fallback.yaml  get_dispatch_matrix.yaml  qa-k6.yaml  release-please.yaml  state-repo-analyze-changes.yaml  state-repo-helm-apps.yaml  state-repo-helm-sys-services.yaml  state-repo-helm.yaml
docs/: state-repo-analyze-changes.md  state-repo-helm.md
firestarter/cli/: __init__.py  parser.py
firestarter/common/: bash_runner.py  config_parser.py  dagger_context.py  firestarter_workflow.py  preprocessor.py  task_manager.py  task_manager.schema.json  tasks.py  validations.py
firestarter/templates/: Dockerfile.node  Dockerfile.spa  build_dockerfile.py  node_api_template.j2  spa_template.j2
firestarter/tests/: mock_classes.py  test_build_images_functionality.py  test_build_images_json_schema.py  test_dagger_workflow.py  test_fnf_error.py  test_preprocessor.py  test_schema_error.py  test_validation_error.py  test_workflow_validate.py
firestarter/tests/fixtures/: build_images.yaml  build_images.yml  build_images_ko.yaml  flavor_error.yml  invalid_jsonschema.json  preprocess_workflow.yaml  preprocess_workflow_error.yaml  simple_workflow.yaml  test_workflow.yaml  workflow.yaml  workflow_error.yaml
firestarter/workflows/build_images/: README.md  __init__.py  auth.py  build_images.py  config.py  providers.py
firestarter/workflows/build_images/providers/: registry.py  secrets.py
firestarter/workflows/build_images/providers/registries/: aws.py  azure.py  base.py  dockerhub.py  factory.py  generic.py  github.py
firestarter/workflows/build_images/providers/secrets/: aws.py  azure.py  base.py  factory.py  generic.py  resolver.py  secrets.py
firestarter/workflows/build_images/resources/: config.yml  flavor_schema.json  schema.json
firestarter/workflows/ci/: __init__.py  bash_runner.py  ci.py  dagger_context.py  schema.json  task_manager.py  tasks.py
firestarter/workflows/on_premises/: __init__.py  main.py  on_premises.py
on_premises/: __main__.py
