[tool.poetry]
name = "firestarter-workflows"
version = "2.2.2"
description = "Firestarter standard Dagger workflows"
authors = ["Javier Gomez Rodriguez <javier.gomez@prefapp.es>"]
readme = "README.md"
packages = [{include = "firestarter"}]

[tool.poetry.dependencies]
python = "^3.10"
anyio = { version = "3.6.2", python = ">=3.6.2" }
dagger-io = { version = "0.12.7", python = ">=3.10,<4.0" }
pyyaml = { version = "6.0.1", python = ">=2.7,<2.8 || >=3.6.0" }
"ruamel.yaml" = { version = "0.18.5", python = ">=3.10,<4.0" }

# optional for on-premises
docker = { version = "6.1.2", python = ">=3.6", optional = true }
pytest = "^7.3.1"
jsonschema = "^4.17.3"
boto3 = "^1.26.161"
azure-identity = "^1.13.0"
azure-keyvault-secrets = "^4.7.0"

[tool.poetry.extras]
build_images = ["docker", "azure-identity", "azure-keyvault-secrets", "boto3"]

[tool.poetry.scripts]
firestarter = "firestarter.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
